# pipes-regex-applicative.hs

./: CHANGELOG.md  README.md  pipes-regex-applicative.hs.cabal
x/: Main.hs
